# py-agent-harness

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: roadmap.md
evals/: m3_reliability_cases.md  m4_long_task_cases.md
src/agent_harness/: __init__.py  cli.py  context.py  hooks.py  memory.py  recovery.py  session.py  tasks.py  todo.py
src/agent_harness/agent/: __init__.py  loop.py
src/agent_harness/llm/: __init__.py  anthropic.py  base.py  openai.py
src/agent_harness/messages/: __init__.py  models.py
src/agent_harness/observability/: __init__.py  tracing.py
src/agent_harness/permissions/: __init__.py
src/agent_harness/prompts/: __init__.py
src/agent_harness/tools/: __init__.py  base.py  coding.py  file_io.py  git_tools.py  list_files.py  registry.py  search.py  shell.py  workspace.py
src/coding_agent/: __init__.py
tests/integration/: test_anthropic_client.py
tests/unit/: test_agent_loop.py  test_anthropic_adapter.py  test_cli.py  test_coding_tools.py  test_m3_reliability.py  test_m4_long_tasks.py  test_openai_adapter.py  test_tool_registry.py
