[project]
name = "py-agent-harness"
version = "0.1.0"
description = "从零构建 Claude Code 风格的 Python Agent Harness，并逐步演进为微服务故障诊断 Agent"
readme = "README.md"
authors = [
    { name = "麦香鱼", email = "1248101310@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "httpx>=0.28.1",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "structlog>=26.1.0",
    "typer>=0.26.7",
]

[project.scripts]
agent-harness = "agent_harness:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "agent_harness"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]
